--- a/GranTurismo/sezona2025.html
+++ b/GranTurismo/sezona2025.html
@@ -39,7 +39,7 @@ th { background:#333; }
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
-import { getFirestore, collection, doc, setDoc, getDocs } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore.js";
+import { getFirestore } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore.js";
 
 const firebaseConfig = {
 apiKey: "AIzaSyCkR-AyJK2vFnz0V2HTuz2b3zCaLMxbXtI",
@@ -84,7 +84,7 @@ sekce.innerHTML = "<h2>Výsledky závodů 2025</h2>";
 let body = {}, podia = {}, dns = {};
 zavodnici.forEach(z=>{body[z]=0; podia[z]=0; dns[z]=0;});
 
-// Graf
+// Dataset pro graf
 let labels=[], datasets={};
 zavodnici.forEach(z=>datasets[z]=[]);
 
@@ -93,43 +93,66 @@ let html='<table><tr><th>Datum</th><th>Závod</th><th>Trať</th>';
 for(let i=1;i<=5;i++){ html+=`<th>${i}. místo</th>`; }
 html+='</tr>';
 
-zavody.forEach((z,index)=>{
+// Pro každý závod
+zavody.forEach(z=>{
   labels.push(z.nazev);
   html+='<tr><td>'+new Date(z.datum).toLocaleDateString()+'</td><td>'+z.nazev+'</td><td>'+z.trat+'</td>';
+  
   z.vysledky.forEach((v,i)=>{
-    let b=0;
     let zavodnik = v;
+    let b = 0;
     if(v==="DNS") { 
       zavodnik = zavodnici[i]; 
       dns[zavodnik]++; 
       b=0; 
     } else if(v.includes("(PEN)")) { 
       zavodnik = v.replace(" (PEN)",""); 
-      b=6; body[zavodnik]+=6; podia[zavodnik]+=1; 
+      b=6; 
+      body[zavodnik]+=b; 
+      podia[zavodnik]+=1; 
     } else { 
-      body[v]+=bodyRozdeleni[i]; 
+      b = bodyRozdeleni[i]; 
+      body[v]+=b; 
       podia[v]+=(i<3)?1:0; 
     }
-    datasets[zavodnici[i]].push(body[zavodnici[i]]);
     html+=`<td>${v}</td>`;
   });
   html+='</tr>';
 });
-html+='</table>';
 
-// Celkové body a pódiová umístění
+// Celkové pořadí – seřazeno podle bodů sestupně
 html+='<h3>Celkové pořadí</h3>';
 html+='<table><tr><th>Závodník</th><th>Body</th><th>Pódiová umístění</th><th>DNS</th></tr>';
-// Seřadit podle bodů sestupně
 const serazeni = [...zavodnici].sort((a,b)=>body[b]-body[a]);
-
 serazeni.forEach(z=>{
   html+=`<tr><td>${z}</td><td>${body[z]}</td><td>${podia[z]}</td><td>${dns[z]}</td></tr>`;
 });
 html+='</table>';
 
-// Graf
+// Naplnění datasetu pro graf kumulativních bodů
+zavodnici.forEach(z=>datasets[z]=[]); // reset
+zavodnici.forEach(z=>{body[z]=0;}); // reset
+
+zavody.forEach(z=>{
+  z.vysledky.forEach((v,i)=>{
+    let zavodnik = v;
+    let b = 0;
+    if(v==="DNS") { 
+      zavodnik = zavodnici[i]; b=0; 
+    } else if(v.includes("(PEN)")) { 
+      zavodnik = v.replace(" (PEN)",""); 
+      b=6; 
+    } else { 
+      b = bodyRozdeleni[i]; 
+    }
+    if(!v.includes("DNS")) body[zavodnik]+=b;
+  });
+  zavodnici.forEach(z=>datasets[z].push(body[z]));
+});
+
 sekce.innerHTML += html + '<canvas id="grafBody" height="200"></canvas>';
+
+// Graf
 const ctx = document.getElementById('grafBody').getContext('2d');
 new Chart(ctx,{
   type:'line',
