--- a/GranTurismo/sezona2025.html
+++ b/GranTurismo/sezona2025.html
@@ -5,247 +5,181 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Hric-Pic-Ma-Ma-Tama Championship 2025</title>
 <style>
-  body { font-family: -apple-system, BlinkMacSystemFont, sans-serif; background:#111; color:#eee; margin:0; padding:0; }
-  header { background:#1a1a1a; padding:1rem; text-align:center; }
-  nav { display:flex; justify-content:center; background:#222; }
-  nav button { margin:0.5rem; padding:0.5rem 1rem; background:#333; border:none; color:#eee; cursor:pointer; }
-  nav button:hover { background:#444; }
-  section { padding:1rem; display:none; }
-  table { width:100%; border-collapse:collapse; margin-bottom:1rem; }
-  th, td { border:1px solid #444; padding:0.5rem; text-align:center; }
+  body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; background-color: #121212; color: #fff; margin:0; padding:0;}
+  header { padding:20px; text-align:center; background: linear-gradient(90deg, #0d1b36, #610000); }
+  nav { display:flex; justify-content:center; background:#1e1e1e; }
+  nav button { background:none; border:none; color:#fff; padding:15px 20px; cursor:pointer; font-size:16px; }
+  nav button.active { border-bottom: 3px solid #ff0000; }
+  section { padding:20px; display:none; }
+  section.active { display:block; }
+  table { width:100%; border-collapse: collapse; margin-top:20px;}
+  th, td { border:1px solid #444; padding:8px; text-align:center; }
   th { background:#222; }
-  .chart-container { width:100%; max-width:800px; margin:1rem auto; }
+  canvas { max-width:100%; height:auto; }
 </style>
+<!-- Firebase SDKs -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+<!-- Chart.js UMD -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
 
 <header>
-<h1>Hric-Pic-Ma-Ma-Tama Championship 2025</h1>
+  <h1>Hric-Pic-Ma-Ma-Tama Championship 2025</h1>
 </header>
 
 <nav>
-  <button onclick="showTab('aktualni')">Aktuální sezóna</button>
-  <button onclick="showTab('statistiky')">Statistiky</button>
-  <button onclick="showTab('archiv')">Archiv sezón</button>
-  <button onclick="showTab('profil')">Profil závodníka</button>
-  <button onclick="showTab('admin')">Admin</button>
+  <button class="tablink active" data-tab="aktualni">Aktuální sezóna</button>
+  <button class="tablink" data-tab="statistiky">Statistiky</button>
+  <button class="tablink" data-tab="archiv">Archiv sezón</button>
+  <button class="tablink" data-tab="profil">Profil závodníka</button>
+  <button class="tablink" data-tab="admin">Admin</button>
 </nav>
 
-<!-- Aktuální sezóna -->
-<section id="aktualni">
-<h2>Aktuální sezóna</h2>
+<section id="aktualni" class="active">
+  <h2>Nejbližší závod</h2>
+  <div id="banner">Zde bude upoutávka na nadcházející závod</div>
 
-<h3>Tabulka výsledků</h3>
-<table id="tabulkaVysledky">
-  <thead>
-    <tr>
-      <th>Datum</th>
-      <th>Závod a trať</th>
-      <th>1. místo</th>
-      <th>2. místo</th>
-      <th>3. místo</th>
-      <th>4. místo</th>
-      <th>5. místo</th>
-    </tr>
-  </thead>
-  <tbody></tbody>
-</table>
+  <h2>Vývoj bodů</h2>
+  <canvas id="pointsChart"></canvas>
 
-<h3>Celkové pořadí</h3>
-<table id="tabulkaPoradi">
-  <thead>
-    <tr>
-      <th>Závodník</th>
-      <th>Body</th>
-      <th>Pódiová umístění</th>
-      <th>DNS</th>
-    </tr>
-  </thead>
-  <tbody></tbody>
-</table>
+  <h2>Pořadí závodníků</h2>
+  <table id="standings">
+    <thead>
+      <tr><th>Závodník</th><th>Body</th><th>Pódiová umístění</th><th>DNS</th></tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 
-<div class="chart-container">
-  <canvas id="grafBody"></canvas>
-</div>
+  <h2>Výsledky závodů</h2>
+  <table id="results">
+    <thead>
+      <tr>
+        <th>Datum</th><th>Závod a trať</th><th>1. místo</th><th>2. místo</th><th>3. místo</th><th>4. místo</th><th>5. místo</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 </section>
 
-<!-- Statistiky -->
 <section id="statistiky">
-<h2>Statistiky sezóny 2025</h2>
-
-<div id="serieVitezstvi"></div>
-<div id="seriePosledni"></div>
-<div id="maxDNS"></div>
-
-<h3>Porovnání H2H</h3>
-<label for="h2h1">Závodník 1:</label>
-<select id="h2h1"></select>
-<label for="h2h2">Závodník 2:</label>
-<select id="h2h2"></select>
-<button id="porovnatH2H">Porovnat</button>
-<div id="vysledekH2H"></div>
+  <h2>Statistiky</h2>
+  <div id="statsBanner">Statistiky a H2H porovnání</div>
 </section>
 
-<!-- Archiv sezón -->
 <section id="archiv">
-<h2>Archiv sezón</h2>
-<label for="vyberRok">Vyber sezónu:</label>
-<select id="vyberRok"></select>
-<div id="archivObsah"></div>
+  <h2>Archiv sezón</h2>
+  <div id="archiveBanner">Sezónní výsledky</div>
 </section>
 
-<!-- Profil závodníka -->
 <section id="profil">
-<h2>Profil závodníka</h2>
-<p>Funkce pro nahrání fotky, oblíbené auto a trať připravujeme.</p>
+  <h2>Profil závodníka</h2>
+  <div id="profileBanner">Informace a oblíbené auta závodníků</div>
 </section>
 
-<!-- Admin -->
 <section id="admin">
-<h2>Admin</h2>
-<p>Přihlášení přes Google účet + zadávání výsledků připraveno.</p>
+  <h2>Admin</h2>
+  <button id="loginBtn">Přihlásit se přes Google</button>
+  <div id="adminBanner">Zadávání závodů</div>
 </section>
 
-<script type="module">
-// Globální showTab
-window.showTab = function(tab){
-  ['aktualni','statistiky','archiv','profil','admin'].forEach(t=>{
-    document.getElementById(t).style.display = (t===tab)?'block':'none';
-  });
-}
-showTab('aktualni');
-
-// --- Data ---
-const zavodnici = ['Viki','Mára','Maty','Hárdy','Ondra'];
-const bodyRozdeleni = [10,8,6,4,2]; // 1.-5. místo
-const zavody = [
-  {datum:'01.05.2025', nazev:'American Muscle', trat:'Daytona road circuit', vysledky:['Viki','Maty','Hardy','DNS','DNS']},
-  {datum:'08.05.2025', nazev:'Limonádový Joe', trat:'Red Bull Ring', vysledky:['Viki','Hardy','Maty','DNS','DNS']},
-  {datum:'15.05.2025', nazev:'Forza Italia', trat:'Monza', vysledky:['Hardy','Viki','Maty','DNS','DNS']},
-  {datum:'22.05.2025', nazev:'Dovolená v Chorvatsku', trat:'Dragon Trail', vysledky:['Viki','Maty','Hardy','DNS','DNS']},
-  {datum:'29.05.2025', nazev:'Tokyo Drift', trat:'Suzuka', vysledky:['Viki','Maty','Hardy','DNS','DNS']},
-  {datum:'05.06.2025', nazev:'Po stopách Jamese Bonda', trat:'Brands Hatch', vysledky:['Maty','Viki','Hardy','DNS','DNS']},
-  {datum:'12.06.2025', nazev:'24h Le Mans', trat:'Le Mans', vysledky:['Viki','Hardy','Maty','DNS','DNS']}
-];
-
-// --- Naplnění tabulky výsledků ---
-function naplnVysledky(){
-  const tbody = document.querySelector('#tabulkaVysledky tbody');
-  tbody.innerHTML = '';
-  zavody.forEach(zav=>{
-    const tr = document.createElement('tr');
-    tr.innerHTML = `<td>${zav.datum}</td>
-                    <td>${zav.nazev} / ${zav.trat}</td>
-                    ${zav.vysledky.map(v=>`<td>${v}</td>`).join('')}`;
-    tbody.appendChild(tr);
-  });
-}
-
-// --- Celkové pořadí ---
-function naplnPoradi(){
-  const body = {}, podium={}, dns = {};
-  zavodnici.forEach(z=>{ body[z]=0; podium[z]=0; dns[z]=0; });
-  zavody.forEach(zav=>{
-    zav.vysledky.forEach((v,i)=>{
-      if(v==='DNS'){ dns[zavodnici[i]]++; } 
-      else { body[v]+=bodyRozdeleni[i]; if(i<3) podium[v]++; }
+<script>
+  // --- TAB SWITCH ---
+  const tabs = document.querySelectorAll('.tablink');
+  tabs.forEach(btn=>{
+    btn.addEventListener('click',()=> {
+      document.querySelectorAll('section').forEach(sec=>sec.classList.remove('active'));
+      document.querySelector('#'+btn.dataset.tab).classList.add('active');
+      tabs.forEach(b=>b.classList.remove('active'));
+      btn.classList.add('active');
     });
   });
-  const poradi = zavodnici.map(z=>({zavodnik:z, body:body[z], podium:podium[z], dns:dns[z]}));
-  poradi.sort((a,b)=>b.body-a.body);
 
-  const tbody = document.querySelector('#tabulkaPoradi tbody');
-  tbody.innerHTML = '';
-  poradi.forEach(p=>{
-    const tr=document.createElement('tr');
-    tr.innerHTML=`<td>${p.zavodnik}</td><td>${p.body}</td><td>${p.podium}</td><td>${p.dns}</td>`;
-    tbody.appendChild(tr);
-  });
-}
-
-// --- Graf body ---
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-function vykresliGraf(){
-  const ctx=document.getElementById('grafBody').getContext('2d');
-  const labels = zavody.map(z=>z.nazev);
-  const dataSets = zavodnici.map((z,i)=>({
-    label:z,
-    data:zavody.map(zav=>{ 
-      let idx=zav.vysledky.findIndex(v=>v===z); 
-      return (idx===-1 || zav.vysledky[idx]==='DNS') ? 0 : bodyRozdeleni[idx];
-    }),
-    borderColor:`hsl(${i*70},70%,50%)`,
-    fill:false
-  }));
-  new Chart(ctx,{type:'line',data:{labels:labels,datasets:dataSets},options:{responsive:true,plugins:{legend:{position:'bottom'}}}});
-}
-
-// --- Statistiky ---
-function vypocetStatistik(){
-  let serieVitezstvi={}, seriePosledni={}, dnsCount={}, bodySum={};
-  zavodnici.forEach(z=>{ serieVitezstvi[z]=0; seriePosledni[z]=0; dnsCount[z]=0; bodySum[z]=0; });
-
-  zavodnici.forEach(z=>{
-    let maxV=0, curV=0, maxP=0, curP=0;
-    zavody.forEach(zav=>{
-      let idx = zav.vysledky.findIndex(v=>v===z);
-      if(idx===-1 || zav.vysledky[idx]==='DNS'){ dnsCount[z]++; curV=0; curP=0; } 
-      else {
-        bodySum[z]+=bodyRozdeleni[idx];
-        if(idx===0){ curV++; maxV=Math.max(maxV,curV); } else curV=0;
-        let startCount = zav.vysledky.filter(v=>v!=='DNS').length;
-        if(idx===startCount-1){ curP++; maxP=Math.max(maxP,curP); } else curP=0;
-      }
-    });
-    serieVitezstvi[z]=maxV;
-    seriePosledni[z]=maxP;
-  });
-
-  document.getElementById('serieVitezstvi').innerHTML='<h3>Nejdelší série vítězství</h3><ul>'+
-    zavodnici.map(z=>`<li>${z}: ${serieVitezstvi[z]}</li>`).join('')+'</ul>';
-  document.getElementById('seriePosledni').innerHTML='<h3>Nejdelší série posledního místa (bez DNS)</h3><ul>'+
-    zavodnici.map(z=>`<li>${z}: ${seriePosledni[z]}</li>`).join('')+'</ul>';
-  document.getElementById('maxDNS').innerHTML='<h3>Největší počet DNS</h3><ul>'+
-    zavodnici.map(z=>`<li>${z}: ${dnsCount[z]}</li>`).join('')+'</ul>';
-
-  const sel1=document.getElementById('h2h1'), sel2=document.getElementById('h2h2');
-  zavodnici.forEach(z=>{ sel1.innerHTML+=`<option value="${z}">${z}</option>`; sel2.innerHTML+=`<option value="${z}">${z}</option>`; });
-
-  document.getElementById('porovnatH2H').onclick=()=>{
-    const z1=sel1.value,z2=sel2.value;
-    if(z1===z2){ document.getElementById('vysledekH2H').innerText="Vyberte dva různé závodníky"; return; }
-    let z1Vyh=0,z2Vyh=0;
-    zavody.forEach(zav=>{
-      let idx1=zav.vysledky.findIndex(v=>v===z1);
-      let idx2=zav.vysledky.findIndex(v=>v===z2);
-      if(idx1!==-1 && idx2!==-1){ if(idx1<idx2) z1Vyh++; else if(idx2<idx1) z2Vyh++; }
-    });
-    document.getElementById('vysledekH2H').innerHTML=`${z1} vyhrál ${z1Vyh}x, ${z2} vyhrál ${z2Vyh}x`;
+  // --- FIREBASE INIT ---
+  const firebaseConfig = {
+    apiKey: "AIzaSyCkR-AyJK2vFnz0V2HTuz2b3zCaLMxbXtI",
+    authDomain: "test-gt7.firebaseapp.com",
+    projectId: "test-gt7",
+    storageBucket: "test-gt7.app",
+    messagingSenderId: "928154989107",
+    appId: "1:928154989107:web:20a34d0009fa75bd1ee946",
+    measurementId: "G-1SG8DW1KQ9"
   };
-}
+  firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
+  const db = firebase.firestore();
 
-// --- Archiv sezón ---
-const sezony = {2025:zavody};
-function naplnArchiv(){
-  const selRok=document.getElementById('vyberRok');
-  Object.keys(sezony).forEach(r=>{ selRok.innerHTML+=`<option value="${r}">${r}</option>`; });
-  const obsah=document.getElementById('archivObsah');
-  function vykresliRok(rok){
-    const data=sezony[rok];
-    let html='<table><thead><tr><th>Datum</th><th>Závod</th><th>Trať</th><th>1.</th><th>2.</th><th>3.</th><th>4.</th><th>5.</th></tr></thead><tbody>';
-    data.forEach(z=>{ html+=`<tr><td>${z.datum}</td><td>${z.nazev}</td><td>${z.trat}</td>${z.vysledky.map(v=>`<td>${v}</td>`).join('')}</tr>`; });
-    html+='</tbody></table>'; obsah.innerHTML=html;
+  document.getElementById('loginBtn').addEventListener('click', ()=>{
+    const provider = new firebase.auth.GoogleAuthProvider();
+    auth.signInWithPopup(provider).then(result=>{
+      alert('Přihlášeno: '+result.user.displayName);
+    }).catch(console.error);
+  });
+
+  // --- DATA ---
+  const drivers = ["Viki","Mára","Maty","Hardy","Ondra"];
+  const resultsData = [
+    {date:"01:03:25 20:00", race:"American Muscle", track:"Daytona road circuit", order:["Viki","Maty","Hardy","DNS","DNS"]},
+    {date:"05:03:25 20:00", race:"Limonádový Joe", track:"Red Bull Ring", order:["Viki","Hardy","Maty","DNS","DNS"]},
+    {date:"10:03:25 20:00", race:"Forza Italia", track:"Monza", order:["Hardy","Viki","Maty","DNS","DNS"]},
+    {date:"15:03:25 20:00", race:"Dovolená v Chorvatsku", track:"Dragon Trail - přímořská trať", order:["Viki","Maty","Hardy","DNS","DNS"]},
+    {date:"20:03:25 20:00", race:"Tokyo Drift", track:"Suzuka", order:["Viki","Maty","Hardy","DNS","DNS"]},
+    {date:"25:03:25 20:00", race:"Po stopách Jamese Bonda", track:"Brands Hatch", order:["Maty","Viki","Hardy","DNS","DNS"]},
+    {date:"30:03:25 20:00", race:"24h Le Mans", track:"Le Mans", order:["Viki","Hardy","Maty","DNS","DNS"]}
+  ];
+  const pointsMap = [10,8,6,4,2]; //1.-5.místo
+
+  // --- VYPOČET POŘADÍ ---
+  function calculateStandings(){
+    const standings = {};
+    drivers.forEach(d=>standings[d]={points:0,podium:0,dns:0});
+    resultsData.forEach(r=>{
+      r.order.forEach((d,i)=>{
+        if(d==="DNS"){ standings[drivers[i]].dns++; return;}
+        standings[d].points += pointsMap[i] || 0;
+        if(i<3) standings[d].podium++;
+      });
+    });
+    return Object.entries(standings).sort((a,b)=>b[1].points - a[1].points);
   }
-  selRok.onchange=()=>vykresliRok(selRok.value);
-  selRok.value=Object.keys(sezony)[0]; selRok.onchange();
-}
 
-// --- Inicializace ---
-naplnVysledky();
-naplnPoradi();
-vykresliGraf();
-vypocetStatistik();
-naplnArchiv();
+  // --- VYPSÁNÍ TABULKY ---
+  const tbodyResults = document.querySelector('#results tbody');
+  resultsData.slice().reverse().forEach(r=>{
+    const tr = document.createElement('tr');
+    tr.innerHTML = `<td>${r.date}</td><td>${r.race} / ${r.track}</td>` +
+      r.order.map(d=>`<td>${d}</td>`).join('');
+    tbodyResults.appendChild(tr);
+  });
+
+  const tbodyStandings = document.querySelector('#standings tbody');
+  function renderStandings(){
+    tbodyStandings.innerHTML="";
+    calculateStandings().forEach(([name,data])=>{
+      const tr = document.createElement('tr');
+      tr.innerHTML = `<td>${name}</td><td>${data.points}</td><td>${data.podium}</td><td>${data.dns}</td>`;
+      tbodyStandings.appendChild(tr);
+    });
+  }
+  renderStandings();
+
+  // --- GRAF BODŮ ---
+  const ctx = document.getElementById('pointsChart').getContext('2d');
+  const datasets = drivers.map(d=>{
+    let sum=0;
+    const data = resultsData.map(r=>{
+      const idx = r.order.indexOf(d);
+      if(idx==-1 || r.order[idx]==="DNS") return sum;
+      sum += pointsMap[idx]||0;
+      return sum;
+    });
+    return {label:d,data, borderColor: getRandomColor(), fill:false, tension:0.1};
+  });
+  const pointsChart = new Chart(ctx,{type:'line', data:{labels:resultsData.map(r=>r.race), datasets}, options:{responsive:true, plugins:{legend:{labels:{color:'#fff'}}}, scales:{x:{ticks:{color:'#fff'}},y:{ticks:{color:'#fff'}}}}});
+
+  function getRandomColor(){ const letters="0123456789ABCDEF"; return "#"+Array.from({length:6}).map(()=>letters[Math.floor(Math.random()*16)]).join(''); }
 </script>
 
 </body>
